@@ -1,5 +1,9 @@
 2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	* src/*, graph/*: s/unsigned int/size_t/ where appropriate.
+
+2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	* graph/*.*: s/0/NULL/ where appropriate.
 
 2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>
